# Awesome-CV

./: CMakeLists.txt  Makefile  UseLATEX.cmake  awesome-cv.cls
spencer/: coverletter.tex  coverletter_LockheedMartin.tex  coverletter_canonical.tex  coverletter_python_cononical.tex  coverletter_recusion.tex  resume.tex
spencer/cv/: honors.tex
spencer/resume/: committees.tex  education.tex  experience.tex  extracurricular.tex  honors.tex  oldexperience.tex  paragraphs.tex  patents_copyrights.tex  presentation.tex  skills.tex  summary.tex  writing.tex
