CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
PROJECT(LatexProject NONE)

include(UseLATEX)

find_package(LATEX COMPONENTS XELATEX)
IF(LATEX_FOUND)
	IF(LATEX_XELATEX_FOUND)
		MESSAGE(STATUS "xelatex found - ${XELATEX_COMPILER}")
		SET(PDFLATEX_COMPILER ${XELATEX_COMPILER})
	ENDIF()
ELSE()
	MESSAGE(ERROR "No latex tools found!")
ENDIF()

SET(LATEX_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
SET(out "${CMAKE_CURRENT_SOURCE_DIR}/output")

FILE(GLOB_RECURSE contents_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "spencer/resume/*")

SET(RESUME_BASE_FILENAME "resume")
SET(RESUME_TEX "./spencer/${RESUME_BASE_FILENAME}.tex")
MESSAGE(STATUS ${contents_files})

ADD_LATEX_DOCUMENT("${RESUME_TEX}"
  INPUTS "${contents_files}"  
)
